opam-version: "2.0"
name: "rillc"
version: "0.0.1"
synopsis: "One-line description"
description: """
Longer description
"""
maintainer: "yutopp <yutopp@gmail.com>"
author: "yutopp <yutopp@gmail.com>"
license: "Boost License Version 1.0"
homepage: "https://github.com/yutopp/rill"
bug-reports: "https://github.com/yutopp/rill/issues"
dev-repo: "https://github.com/yutopp/rill.git"
depends: [
  "ocaml"                      {build & >= "4.07.0"}
  "ocamlfind"                  {build}
  "dune"                       {build}
  "base"                       {>= "v0.11.0"}
  "stdio"                      {>= "v0.11.0"}
  "menhir"                     {>= "20180905"}
  "stdint"                     {>= "0.5.1"}
  "llvm"                       {>= "7.0.0"}
  "ppx_sexp_conv"              {>= "v0.11.2"}
  "ppx_let"                    {>= "v0.11.0"}
  "expect_test_helpers_kernel" {with-test}
]
build: ["dune" "build" "-p" name]
