(library
 (name            rillc)
 (public_name     rillc)
 (libraries       base stdio rillc.common rillc.syntax rillc.sema rillc.codegen)
 (preprocess
  (pps ppx_sexp_conv ppx_let)))

;(rule
; (targets c_flags.sexp c_library_flags.sexp)
; (deps    (:discover config/discover.exe))
; (action  (run %{discover} -ocamlc %{ocamlc})))
