(library
 (name rillc)
 (public_name rillc)
 (libraries base stdio ocamlgraph rillc.common rillc.syntax rillc.sema
   rillc.codegen rillc.tool rillc.diagnostics)
 (preprocess
  (pps ppx_let ppx_deriving.show)))

;(rule
; (targets c_flags.sexp c_library_flags.sexp)
; (deps    (:discover config/discover.exe))
; (action  (run %{discover} -ocamlc %{ocamlc})))
